--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.html
@@ -69,6 +69,5 @@
   <div class='close'>
     <button (click)="mep.expanded = false;">{{ 'Close' | translate}}</button>
   </div> -->
-  <button type="button" mat-dialog-close="cancel" class="abscancel"></button>
+  <button type="button" mat-dialog-close="cancel" class="absclose">{{"Close"|translate}}</button>
 </div>
-
