--- a/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.scss
+++ b/src/app/parts/myplan-plan-edit-dialog/myplan-plan-edit-dialog.component.scss
@@ -212,6 +212,20 @@
           content: url("../../../assets/img/btn_delete.svg");
         }
       }
+
+      button.absclose{
+        all: unset;
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 12px;
+        padding: 3px;
+        background-color: #4A4A4A;
+        color: #fff;
+        border:none;
+        border-radius: 3px;
+        cursor: pointer;
+      }
     }
   }
 }
