--- a/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
+++ b/src/app/parts/myplan-spot-edit-dialog/myplan-spot-edit-dialog.component.html
@@ -60,6 +60,6 @@
       </select>
     </div>
   </div>
-  <button type="button" mat-dialog-close="cancel" class="abscancel"></button>
+  <button type="button" mat-dialog-close="cancel" class="absclose">{{"Close"|translate}}</button>
 </div>
 
