upd0614詳細イメージ画角調整

--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -1033,7 +1033,7 @@ div.plandtl {
           }
         }
 
-        $img_height:42vw;
+        $img_height:440px;
         $img_height_m:54vw;
         $img_height_s:69vw;
 
