--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -500,7 +500,7 @@ div.spotdtl {
     overflow: hidden;
 
     @media screen and (min-width: 1025px) {
-      height: 33.3vw;
+      height: 420px;
     }
 
     img {
