--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <mat-list class="planex" *ngIf="row.planExplanation">
+      <mat-list class="planex" *ngIf="row?.planExplanation">
         <mat-list-item>
           <p>{{ row.planExplanation }}</p>
         </mat-list-item>
