--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -97,7 +97,7 @@ div.plandtl {
         .name {
           display: flex;
           align-items: center;
-          flex-basis: 70%;
+          // flex-basis: 70%;
 
           .mark {
             img {
@@ -117,7 +117,7 @@ div.plandtl {
         .buttons {
           display: flex;
           align-items: center;
-          flex-basis: 30%;
+          // flex-basis: 30%;
           justify-content: flex-end;
 
           .plan_fav {
@@ -322,33 +322,7 @@ div.plandtl {
       .lt {
         display: flex;
 
-        .mark {
-          width: 52px;
-          margin-right: 4px;
-          color: #fff;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          font-size: 14px;
-
-          &.plan {
-            height: 28px;
-            width: 52px;
-            border-radius: 14px;
-            background: #FDB750;
-            position: relative;
-
-            &::before {
-              content: "";
-              display: inline-block;
-              width: 15px;
-              height: 14px;
-              background: url("../../../assets/img/pref_plan.svg") no-repeat;
-              vertical-align: middle;
-              margin-left: 2px;
-            }
-          }
-        }
+        @include marks();
 
         .areaName {
           background-color: rgba(255, 255, 255, 0.8);
@@ -483,7 +457,7 @@ div.plandtl {
 
       .plan-info {
         background-color: #fff;
-        border-radius: 10px;
+        border-radius: 10px 10px 0 0;
         left: 0;
         right: 0;
         padding-top: 0;
@@ -1605,6 +1579,86 @@ div.plandtl {
         color: #F3787F;
         font-size: 14px;
         text-align: center;
+      }
+    }
+  }
+}
+
+#util {
+  padding: 12px 16px;
+  border-bottom: 1px solid #dccda9;
+  border-radius: 0;
+
+  ::ng-deep {
+    .mat-card-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .comment {
+        a {
+          display: flex;
+          align-items: center;
+          text-decoration: none;
+          color: rgba(0, 0, 0, .87);
+
+          span {
+            margin: auto 4px;
+          }
+
+          &::before {
+            content: "";
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background: url(../../../assets/img/chat_bubble.svg);
+            background-repeat: no-repeat;
+            background-size: 20px;
+            margin-right: 12px;
+          }
+        }
+
+      }
+
+      .favorite {
+        display: flex;
+        align-items: center;
+
+        span {
+          margin: auto 8px;
+        }
+
+        button.add-to-favorite {
+          // @include ios-reset;
+          box-shadow: none;
+          min-width: auto;
+          padding: 0;
+          width: 20px;
+          height: 20px;
+          margin-right: 12px;
+          line-height: initial;
+
+          &::before {
+            content: "";
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background: url(../../../assets/img/icon_fav_b.svg);
+            background-repeat: no-repeat;
+          }
+
+          &.on {
+            &::before {
+              background: url(../../../assets/img/icon_fav_b_on.svg);
+              background-repeat: no-repeat;
+            }
+          }
+
+          ::ng-deep.mat-button-ripple {
+            width: 0;
+            height: 0;
+          }
+        }
       }
     }
   }
