--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -9,7 +9,7 @@
 div.spotdtl {
   p {
     font-size: $fs-normal;
-    margin-block-start: 0;
+    margin-block-start: 12px;
   }
 
   .agm-map {
@@ -88,6 +88,7 @@ div.spotdtl {
         align-items: center;
         justify-content: space-between;
         width: 100%;
+        margin-left: 6px;
 
         .name {
           display: flex;
@@ -103,7 +104,7 @@ div.spotdtl {
           }
 
           .title {
-            font-size: 10px;
+            font-size: 16px;
             color: #000;
             font-weight: bolder;
           }
@@ -265,18 +266,16 @@ div.spotdtl {
 
     .mat-card-header {
       position: relative;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: baseline;
 
       h4.header {
-        margin-block-start: 1em;
-        margin-block-end: 0.4em;
+        width: 100%;
       }
 
-      img.mark {
-        width: 41px;
-        position: absolute;
-        right: 0;
-        bottom: 10px;
-      }
+      @include marks();
     }
   }
 
@@ -305,10 +304,11 @@ div.spotdtl {
   }
 
   @media screen and (min-width: 1025px) {
-    div.container{
+    div.container {
       height: calc(100vh - 278px);
       overflow-y: scroll;
       position: relative;
+
       .scroll-to-top {
         position: fixed;
         margin: auto;
@@ -318,14 +318,14 @@ div.spotdtl {
         padding: 0;
         cursor: pointer;
         transition: all 0.2s ease-in-out;
-      
+
         @include ios-reset();
-      
+
         img {
           width: 49px;
         }
-      
-        &.up{
+
+        &.up {
           bottom: 198px;
         }
       }
@@ -447,6 +447,7 @@ div.spotdtl {
 
       .lt {
         display: flex;
+        @include marks();
 
         .areaName {
           background-color: rgba(255, 255, 255, 0.8);
@@ -476,7 +477,7 @@ div.spotdtl {
         .view {
           display: flex;
           flex-direction: column;
-          background-color: #2c2c2ca8;
+          background-color: #471b1ba8;
           padding: 0 4px;
           border-radius: 3px;
           color: #fff;
@@ -534,26 +535,28 @@ div.spotdtl {
 
   ::ng-deep .mat-card {
     box-shadow: none !important;
-    padding: 16px 20px;
+    padding: 16px;
   }
 
   #spotHeader {
     background-color: #f6f6f6;
     border-top: 20px solid #dccda9;
     border-radius: 0;
+    border-bottom: 1px solid #dccda9;
 
     .mat-card-content {
 
       position: relative;
+      //background-color: #fff;
 
       .spot-info {
         background-color: #fff;
-        border-radius: 10px;
+        border-radius: 10px 10px 0 0;
         left: 0;
         right: 0;
         padding-top: 0;
         padding-bottom: 10px;
-        margin: -21px 8px 0;
+        margin: -21px 0 0;
 
         .title {
           height: auto;
@@ -727,7 +730,7 @@ div.spotdtl {
 
   #content {
     background-color: #f6f6f6;
-    padding-top: 20px;
+    padding: 20px 16px 16px;
 
     .mat-card-content {
       .avatar {
@@ -1196,3 +1199,84 @@ div.spotdtl {
 }
 
 @media screen and (min-width: 1025px) {}
+
+#util {
+  padding: 12px 16px;
+  border-bottom: 1px solid #dccda9;
+  border-radius: 0;
+
+  ::ng-deep {
+    .mat-card-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .comment {
+        a {
+          display: flex;
+          align-items: center;
+          text-decoration: none;
+          color: rgba(0, 0, 0, .87);
+          span {
+            margin: auto 4px;
+          }
+
+          &::before {
+            content: "";
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background: url(../../../assets/img/chat_bubble.svg);
+            background-repeat: no-repeat;
+            background-size: 20px;
+            margin-right: 12px;
+          }
+        }
+
+      }
+
+      .favorite {
+        display: flex;
+        align-items: center;
+
+        span {
+          margin: auto 8px;
+        }
+
+        button.add-to-favorite {
+          // @include ios-reset;
+          box-shadow: none;
+          min-width: auto;
+          padding: 0;
+          width: 20px;
+          height: 20px;
+          margin-right: 12px;
+          line-height: initial;
+
+          &::before {
+            content: "";
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background: url(../../../assets/img/icon_fav_b.svg);
+            background-repeat: no-repeat;
+          }
+
+          &.on {
+            &::before {
+              background: url(../../../assets/img/icon_fav_b_on.svg);
+              background-repeat: no-repeat;
+            }
+          }
+
+          ::ng-deep.mat-button-ripple {
+            width: 0;
+            height: 0;
+          }
+        }
+      }
+    }
+  }
+
+
+}
