--- a/src/app/parts/comment-list-post-panel/comment-list-post-panel.component.scss
+++ b/src/app/parts/comment-list-post-panel/comment-list-post-panel.component.scss
@@ -1,48 +1,39 @@
 @import "vars";
-#review{ //mat-card
-  .mat-card-header{
+
+#review {
+
+  //mat-card
+  .mat-card-header {
     position: relative;
     padding: 0 16px;
-    // ::ng-deep.mat-card-header-text{
-    //   padding: 8px;
-    // }
     display: flex;
 
-    button.edit{
-      margin-top: 5px;
-      line-height: 25px;
-      height: 27px;
-      border-radius: 12.5px;
-      font-size: 13px;
-      border-color: $color-pnk04;
-      color: $color-pnk04;
-
-      position: absolute;
-      right: 16px;
-      bottom: 8px;
-    }
-
-    .header{
+    .header {
       margin-bottom: 8px;
     }
   }
-  .mat-card-content{
+
+  .mat-card-content {
     margin-top: 1px;
-    .mat-accordion{
-      .mat-expansion-panel{
+    padding: 0 16px;
+
+    .mat-accordion {
+      .mat-expansion-panel {
         //background-color: rgba(255,255,255,0);
         border-radius: 0;
         box-shadow: none;
 
-        .header{
+        .header {
           padding: 8px;
         }
 
-        .mat-expansion-panel-header{
+        .mat-expansion-panel-header {
+
           //padding: 0 8px!important;
-          .container{
+          .container {
             display: inline-flex;
             align-items: baseline;
+
             .star-ratings-sprite {
               background: url("../../../assets/img/star-rating-sprite.png") repeat-x;
               background-size: 14px;
@@ -53,6 +44,7 @@
               text-indent: -999em;
               width: 70px;
               margin: 0 auto;
+
               .star-ratings-sprite-rating {
                 background: url("../../../assets/img/star-rating-sprite.png") repeat-x;
                 background-size: 14px;
@@ -62,70 +54,108 @@
                 display: block;
               }
             }
-            .counter{
+
+            .counter {
               font-size: 17px;
               margin-left: 0.7em;
             }
           }
 
-          ::ng-deep.mat-expansion-indicator::after{
+          ::ng-deep.mat-expansion-indicator::after {
             padding: 4px;
             vertical-align: 5px;
           }
 
-          span.item{
+          span.item {
             font-size: 14px;
           }
         }
 
-        ::ng-deep.mat-expansion-panel-content{
+        ::ng-deep.mat-expansion-panel-content {
           background-color: #f6f6f6;
-          .mat-expansion-panel-body{
-            padding: 0 16px 16px;
-            .mat-list{
+
+          .mat-expansion-panel-body {
+            padding: 0 12px 16px;
+
+            .mat-list {
               padding-top: 0;
-              .mat-list-item{
-                margin-top: 10px;
+
+              .mat-list-item-content {
+                padding: 0 12px;
+              }
+
+              &.child {
+                width: 100%;
+
+                .mat-list-item {
+                  //border: 1px solid #ccc;
+                  background-color: #eaeaea;
+
+                  .mat-list-item-content {
+                    padding-right: 0;
+                  }
+
+                  .header {
+                    .mat-icon-button {
+                      //right: -10px!important;
+                    }
+                  }
+                }
+
+              }
+
+              .mat-list-item {
+                margin-top: 12px;
                 background-color: #fff;
                 border-radius: 10px;
-                height: auto!important;
+                height: auto !important;
                 padding-bottom: 8px;
-                ::ng-deep.mat-list-item-content{
+                margin-bottom: 8px;
+
+                .mat-list-item-content {
                   flex-direction: column;
-                  .header{
+
+                  .header {
                     width: 100%;
                     display: flex;
-                    justify-content:space-between;
+                    justify-content: space-between;
                     align-items: center;
                     padding-bottom: 0;
                     padding-right: 0;
-                    .date{
+
+                    .data {
                       img {
                         width: 34px;
                         height: 34px;
                         border-radius: 50%;
+                        margin-right: 8px;
                       }
 
-                      font-size: 11px;
+                      font-size: 14px;
                       color: $color-gry06;
                       min-width: 192px;
+                      display: flex;
+                      align-items: center;
                     }
 
 
-                    ::ng-deep .mat-icon-button{
+                    .mat-icon-button {
+                      all: unset;
                       position: absolute;
-                      right: 0;
+                      right: 5px;
+                      top: 13px;
                     }
 
                   }
-                  .title{
+
+                  .title {
                     width: 100%;
                     font-size: 15px;
                     border-bottom: 1px solid $color-gry01;
                     padding-bottom: 4px;
                   }
 
-                  .content{
+                  .content {
                     width: 100%;
                     font-size: 12px;
                     line-height: 1.8;
@@ -137,77 +167,127 @@
                     // -webkit-line-clamp: 3;
                     // overflow: hidden;
 
-                    &.more{
+                    &.more {
                       -webkit-box-orient: unset;
                       -webkit-line-clamp: unset;
                     }
                   }
 
-                  .line2{
+                  .line2 {
                     width: 100%;
                     display: inline-flex;
                     justify-content: space-between;
-                    .visit{
+
+                    .visit {
                       font-size: 12px;
                       color: $color-gry06;
                     }
-                    a{
+
+                    a {
                       text-decoration: none;
                       font-size: 12px;
                       color: $color-gld04;
 
-                      &::after{
+                      &::after {
                         content: "keyboard_arrow_down";
                         font-family: "Material Icons";
                         font-size: 16px;
                         vertical-align: sub;
                       }
 
-                      &.off{
-                        &::after{
+                      &.off {
+                        &::after {
                           content: "keyboard_arrow_up";
                         }
                       }
                     }
                   }
 
-                  .pic{
+                  .pic {
                     width: 100%;
                     margin-top: 5px;
-                    ::ng-deep.owl-item{
-                      width: 74px!important;
+
+                    ::ng-deep.owl-item {
+                      width: 74px !important;
                     }
-                    .thumbnail{
+
+                    .thumbnail {
                       display: inline-flex !important;
                       height: 85px;
                       width: 85px;
                       //border-radius: 6px;
                       overflow: hidden;
-                      img{
+
+                      img {
                         object-fit: cover;
                       }
                     }
                   }
 
-                  .btnedit{
+                  .btnedit {
                     width: 100%;
                     display: flex;
                     justify-content: left;
+                    flex-direction: column;
 
-                    button{
-                      margin-top: 5px;
-                      line-height: 25px;
-                      border-radius: 12.5px;
-                      font-size: 13px;
-                      border-color: $color-gld04;
-                      color: $color-gld04;
+                    .buttons {
+                      display: flex;
+                      flex-direction: row;
 
-                      &.remove{
-                        margin-left: 0.5em;
+                      button {
+                        all: unset;
+                        font-size: 12px;
+
+                        &.add-to-favorite {
+                          min-width: auto;
+                          padding: 0;
+                          background-color: transparent;
+                          width: 30px;
+                          height: 25px;
+                          display: flex;
+                          align-items: center;
+
+                          &::before {
+                            content: "";
+                            display: inline-block;
+                            width: 20px;
+                            height: 20px;
+                            background: url("../../../assets/img/icon_fav_b.svg");
+                            background-repeat: no-repeat;
+                          }
+
+                          &.on {
+                            &::before {
+                              background: url("../../../assets/img/icon_fav_b_on.svg");
+                              background-repeat: no-repeat;
+                            }
+                          }
+
+                          ::ng-deep.mat-button-ripple {
+                            width: 0;
+                            height: 0;
+                          }
+                        }
+
+                        &.edit {
+                          background-color: #ddd;
+                          padding: 2px 11px;
+                          border-radius: 12px;
+                          margin-right: 4px;
+                        }
+
+                        &.remove {
+                          margin-left: 0.5em;
+                          background-color: #ddd;
+                          padding: 2px 11px;
+                          border-radius: 12px;
+                        }
                       }
                     }
+
                   }
-                  .deletePlan{
+
+                  .deletePlan {
                     position: absolute;
                     z-index: 1;
                     top: -13px;
@@ -221,7 +301,7 @@
                     width: 24px;
                     height: 24px;
 
-                    > i {
+                    >i {
                       color: #fff;
                       font-size: 15px;
                     }
@@ -229,11 +309,13 @@
                 }
               }
             }
-            .more{
+
+            .more {
               width: 100%;
               display: flex;
               justify-content: center;
-              button{
+
+              button {
                 margin-top: 18px;
                 margin-bottom: 10px;
                 line-height: 25px;
@@ -249,8 +331,30 @@
       }
     }
 
-    .alert{
+    .alert {
       padding: 0 16px;
+    }
+
+    button.edit{
+      all: unset;
+      background-color: #ddd;
+      padding: 2px 11px;
+      border-radius: 12px;
+      margin-top: 8px;
+    }
+  }
+
+  ::ng-deep {
+    .mat-form-field{
+      font-size: 14px;
+    }
+
+    .mat-form-field-flex {
+      background: none !important;
+    }
+
+    .mat-form-field-underline {
+      color: $color-gry01;
     }
   }
 }
