--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1017,3 +1017,51 @@ $color-grn01: #81C5B4;
     }
   }
 }
+
+@mixin marks {
+  .mark {
+    width: 52px;
+    margin-right: 4px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+
+    &.plan {
+      height: 28px;
+      width: 52px;
+      border-radius: 14px;
+      background: #FDB750;
+      position: relative;
+
+      &::before {
+        content: "";
+        display: inline-block;
+        width: 15px;
+        height: 14px;
+        background: url("../../assets/img/pref_plan.svg") no-repeat;
+        vertical-align: middle;
+        margin-left: 2px;
+      }
+    }
+
+    &.spot {
+      height: 28px;
+      width: 52px;
+      border-radius: 14px;
+      background: #679ecf;
+      position: relative;
+
+      &::before {
+        content: "";
+        display: inline-block;
+        width: 15px;
+        height: 14px;
+        background: url("../../assets/img/pref_spot.svg") no-repeat;
+        vertical-align: middle;
+      }
+    }
+  }
+}
+
