detail scroll to position

--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -126,7 +126,7 @@
     <mat-card id="util">
       <mat-card-content>
         <div class='comment'>
-          <a pageScroll href="#review">
+          <a pageScroll href="#review" [pageScrollOffset]="80">
             コメント
             <span>0</span>件
           </a>
