REMOJU-518 各詳細　いいね、コメントの件数を返す

--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -128,14 +128,19 @@
         <div class='comment'>
           <a pageScroll href="#review" [pageScrollOffset]="80">
             コメント
-            <span>0</span>件
+            <span>{{ reviewQty }}</span>件
           </a>
         </div>
         <div class='favorite'>
           <button mat-button class="add-to-favorite" [ngClass]="{'on':data.isFavorite}" (click)="onClickFavorite()">
           </button>
+          お気に入り
+        </div>
+        <div class='favorite'>
+          <button mat-button class="add-to-favorite" [ngClass]="{'on':data.isThanks}" (click)="onClickThanks()">
+          </button>
           いいね
-          <span>0</span>
+          <span>{{ data.thanksQty }}</span>
         </div>
       </mat-card-content>
     </mat-card>
@@ -299,7 +304,7 @@
 
     <!-- コメント投稿 -->
     <app-comment-list-post-panel *ngIf="reviewResult" [reviewResult]="reviewResult" [type]="$isRemojuPlan ? 2 : 3"
-      [id]="data.planId"></app-comment-list-post-panel>
+      [id]="data.planId" (onCommentUpd)="onCommentUpd($event)"></app-comment-list-post-panel>
 
     <!-- 投稿者のプロフィール-->
     <mat-card id="writer" *ngIf="data.user || data.userStaff">
