--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -61,11 +61,11 @@
         </div>
       </div>
 
-      <mat-list class="planex" *ngIf="row?.planExplanation">
+      <!-- <mat-list class="planex" *ngIf="row?.planExplanation">
         <mat-list-item>
           <p>{{ row.planExplanation }}</p>
         </mat-list-item>
-      </mat-list>
+      </mat-list> -->
 
       <div class="set depart">
         <div class="lt" matTooltip="{{'StartEx'|translate }}" matTooltipPosition="above"
