--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -343,5 +343,5 @@
       <img src="../../../../../assets/img/toTop3.svg" alt="toTop" />
     </button>
   </div>
-
 </div>
+<ngx-loading [show]="loading"></ngx-loading>
