--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -113,7 +113,7 @@
     <mat-card id="util">
       <mat-card-content>
         <div class='comment'>
-          <a pageScroll href="#review" [pageScrollOffset]="80">
+          <a pageScroll href="#review" [pageScrollOffset]="80" [pageScrollDuration]="625">
             コメント
             <span>{{ reviewQty }}</span>件
           </a>
