--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -170,10 +170,12 @@ form {
 
   .mat-card-header.myplan-header {
     cursor: pointer;
+
     span {
       font-size: 16px;
       font-weight: 700;
-      &.noName{
+
+      &.noName {
         font-size: 15px;
         font-weight: normal;
         color: #f44336;
@@ -1959,6 +1961,18 @@ form {
       ::ng-deep {
         .owl-carousel {
           height: 292px;
+        }
+      }
+    }
+  }
+
+  ::ng-deep.cdk-drag-preview {
+    .transfer {
+      .row {
+        dl {
+          &.td {
+            width: 380px;
+          }
         }
       }
     }
